# RUDRA

./: README.md  a  pattern.c  q  triangle
CMAKE/: CMakeLists.txt  main.cpp
OCV/: README.txt  flip_camera_image  flip_camera_image.cpp  rot.py
SABERTOOTH/: README.md
